<resources>
    <string name="app_name">Othila</string>
    <string name="titulo">Titulo:</string>
    <string name="salvar">Salvar</string>
    <string name="paginas">Numero de paginas:</string>
    <string name="voltar">Voltar</string>
    <string name="ajuste">Definir Lembrete:</string>
    <string name="hora">Hora:</string>
    <string name="minuto">Minuto:</string>
    <string name="dia">Dia:</string>
    <string name="mes">Mes:</string>
    <string name="ano">Ano:</string>

</resources>
